@@ -1,3 +1,9 @@
+2014-08-28	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
+
+	* src/lmpmpi.sh: removed
+
+	* src/lmprun.sh: removed
+
 2014-08-26	Erik E. Lorenz	<erik.e.lorenz@gmail.com>
 
 	* src/changelogfiles.sh: renamed to changelogupdate.sh
